--- a/port.css
+++ b/port.css
@@ -3,7 +3,8 @@
 
 body {
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 22px;    
+    font-size: 22px;  
+    word-spacing: 0.1em;      
 }
 
 h1 {
